Fix Text Wrapping in Tab Bar
Tabs in tab bar was set to fixed width that will cut long text in
some languages. Fix it in this patch.

--- a/ui/css/theme-default/navbar.css
+++ b/ui/css/theme-default/navbar.css
@@ -34,7 +34,7 @@
 
 .nav-menu .item {
     display: block;
-    width: 100px;
+    min-width: 100px;
     height: 48px;
     line-height: 48px;
     padding: 0 10px;
